--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,17 +2,24 @@
   border-bottom: 1px solid #3333;
   height: 60px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content:center;
   align-items: center;
   background: #ffffff;
 }
 .search-form {
-  width: 150px;
+  width:43%;
   font-size: 14px;
+  margin-right:55px;
 }
 .search-form input {
+  width:50%;
+  padding:10px;
   text-align: center;
+  border-radius: 5px;
   color: #262626;
+  border: none;
+  box-shadow: 2px 2px 5px #e4e4e4, -2px -2px 5px #e4e4e4;
+  outline: none;
 }
 .logo-image {
   height: 100%;
@@ -22,4 +29,26 @@
 }
 .social {
   width: 50px;
+}
+.social i{
+  font-size: 25px;
+}
+
+@media (max-width:576px) {
+  .search-bar-wrapper{
+    display: flex;
+    justify-content:flex-start;
+    align-items:center;
+    /* position:fixed;
+    top:0;
+    z-index:10; */
+  }
+  .search-form{
+    width:67%;
+  }
+  .search-form input{
+    width:100%;
+    margin-left: 30px;
+  }
+
 }
