--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -7,12 +7,19 @@
   background: #ffffff;
 }
 .search-form {
-  width: 150px;
+  width: 290px;
   font-size: 14px;
 }
 .search-form input {
-  text-align: center;
+  width: 100%;
   color: #262626;
+  padding: 10px;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  outline: none;
+}
+.search-form input:focus {
+  border-color: #db0079;
 }
 .logo-image {
   height: 100%;
@@ -22,4 +29,11 @@
 }
 .social {
   width: 50px;
+  font-size: 20px;
+  color: #555;
+}
+
+.logo-icon {
+  font-size: 35px;
+  color: #db0079;
 }
