--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -45,6 +45,12 @@
   width: 10px;
   margin: 10px;
 }
+.comment-section {
+  height: 10px;
+  width: 10px;
+  margin: 10px;
+  margin-left: 40px;
+}
 .like-number {
   width: 100px;
   margin: 15px 0px;
