--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,25 @@
-.App {
-  text-align: center;
-}
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+html {
+  background-color: #000000;
   color: white;
 }
-.App-title {
-  font-size: 1.5em;
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
-.App-intro {
-  font-size: large;
+
+.loader {
+  border: 8px solid rgba(0, 0, 0, 0.1);
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 1s ease-in-out infinite;
 }
-@keyframes App-logo-spin {
+
+@keyframes spin {
   from {
     transform: rotate(0deg);
   }
